tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-inbound-connections/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0aca1403fc6cb72e0",
                    "RouteTableId": "rtb-003a5f71f0e2c1e2b",
                    "SubnetId": "subnet-07aafe557fd3ec501"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0961cf49241334735",
                    "RouteTableId": "rtb-003a5f71f0e2c1e2b",
                    "SubnetId": "subnet-04c3273bc3fe3ea35"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0570325941c92b3d2",
                    "RouteTableId": "rtb-003a5f71f0e2c1e2b",
                    "SubnetId": "subnet-07af844489c3ba4ac"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-003a5f71f0e2c1e2b",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.96.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0237f8e74c593d7e5",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0c7b05b25617f24ea",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Public-RT"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-070adb215c01d66e0",
                    "RouteTableId": "rtb-0ddab37c173203d3c"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0ddab37c173203d3c",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.96.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Default-RT"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-01031f6953959913a",
                    "RouteTableId": "rtb-0f567198d9104d8dd"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0f567198d9104d8dd",
            "Routes": [
                {
                    "DestinationCidrBlock": "192.168.100.128/25",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0af8151fa6395fafa"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-031a4770d8eaa4853",
                    "RouteTableId": "rtb-0063bc5b42a8004c2",
                    "SubnetId": "subnet-0a49ff61a4e99b94a"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0c40491b0db46d171",
                    "RouteTableId": "rtb-0063bc5b42a8004c2",
                    "SubnetId": "subnet-0f0665c6775ae109f"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0c382bac63ef052ae",
                    "RouteTableId": "rtb-0063bc5b42a8004c2",
                    "SubnetId": "subnet-062448d812f599972"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0063bc5b42a8004c2",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.96.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.16.0.0/16",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "TransitGatewayId": "tgw-0bb1396f4b2cc782c"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0033c1e8faa4dc946",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0c7b05b25617f24ea",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Private-RT"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-ab308bda",
                    "RouteTableId": "rtb-1df4bf63"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-1df4bf63",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-dba497a0",
                    "Origin": "CreateRoute",
                    "State": "blackhole"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-c678b4bb"
        }
    ]
}
